feat: migrate role and menu management
